k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hdfc-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hdfc-website
  template:
    metadata:
      labels:
        app: hdfc-website
    spec:
      containers:
        - name: nginx
          image: jayeshdaud06/hdfc-bank:1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
