k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hdfc-service
spec:
  selector:
    app: hdfc-website
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
