k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hdfc-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(internetbanking(?:/.*)?)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hdfc-service
                port:
                  number: 80

          - path: /(insurance(?:/.*)?)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hdfc-service
                port:
                  number: 80

          - path: /(loans(?:/.*)?)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hdfc-service
                port:
                  number: 80

          - path: /(mobilebanking(?:/.*)?)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hdfc-service
                port:
                  number: 80
